--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,51 @@
-.App {
-  text-align: center;
+.wrapper{
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    width: 100%;
+    background: #222;
+}
+input{
+    height: 30px;
+    width: 250px;
+    border: none;
+    border-bottom: 1px solid whitesmoke;
+    background: none;
+    color: white;
+    padding: 0 10px;
+    outline: none;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+button {
+    width: 100px;
+    height: 30px;
+    font-size: 12px;
+    background: none;
+    border: 1px solid whitesmoke;
+    color: whitesmoke;
+    margin-left: 10px;
+}
+button:hover {
+    background: whitesmoke;
+    color:#222222;
+    cursor: pointer;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.todo_item{
+    display: flex;
+    position: absolute;
+    cursor: move;
+    min-width: 215px;
+    color: black;
+    padding:1em;
+    border-radius: 5px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.delete{
+    position: absolute;
+    right: 5px;
+    top: 5px;
+    background: none;
+    border: none;
 }
